tests/ui/name_taken.stderr
Error [E0118]: the name `x` is already taken here
  --> tests/ui/name_taken.lex:3:9
    |
  3 |     val x = 2;
    |         ^
 Why: inside one function, each name refers to exactly one thing
 Fix: pick a different name, or assign to the existing one with `x = ...`
